# dapp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
locales/: en.yml  zh-CN.yml
src/: app_ctx.rs  app_ws.rs  dapp_ui.rs  fallback.rs  lib.rs  route.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/agent/: mod.rs  websocket_worker.rs
src/ctxs/: contact_ctx.rs  event_ctx.rs  i18n_ctx.rs  load_store.rs  mod.rs  relay_ctx.rs  send_msg_ctx.rs  subscription_ctx.rs  user_ctx.rs
src/views/: home.rs  layout.rs  mod.rs  user_modal.rs
src/views/contact/: entry.rs  mod.rs  recent.rs
src/views/contact/components/: entry.html  recent.html
src/views/html/: contact.html  home.html  layout.html  settings.html  user_modal.html
src/views/settings/: entry.rs  mod.rs
src/views/settings/components/: entry.html
styles/: app.scss  contact.scss  home.scss  user_modal.scss
