[package]
name = "dapp"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive", "rc"] }
serde_derive = "1"
serde_json = "1.0"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
gloo-net = "0.2"
gloo-storage = "0.2.2"
gloo-timers = {version =  "0.2.6", features= ["futures"]}
weblog = "0.3.0"
stylist = {version="0.12",features=["yew_integration"]}
yew = { version="0.20.0", features = ["csr"] }
yew-router = "0.17.0"
# yew-agent = "0.2.0"
# yew-websocket = {path="yew-websocket"}
rust-i18n = "1.1.1"
once_cell = "1.17.0"
log = "0.4.17"
indexmap = {version="1.9.2", features=["serde-1"]}
wasm-logger = "0.2.0"
yew-hooks = "0.2.0"
chrono = {version="0.4.24", features=["wasmbind"]} 
# bounce = "0.6.1"

[dependencies.nostr-sdk]
version = "0.20"
default-features = false
features = [
    "nip04",
    "nip05",
    "nip06",
    "nip11",
    "nip19",
    "nip46",
]

[dependencies.web-sys]
version = "0.3.59"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh-cn"]

# The default locale, default: "en".  修改这个貌似没作用
default-locale = "zh-cn"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path is same as the path you pass to `rust_i18n::i18n!` method.
load-path = "locales"

[workspace]
members = [
    "src-tauri",
    ]
